# textual-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
.planning/: HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.1-REQUIREMENTS.md  v1.2-REQUIREMENTS.md
.planning/notes/: 2026-03-26-ferrocene-medical-devices.md
.planning/phases/01-semantic-theme-engine/: 01-02-SUMMARY.md
.planning/phases/02-widget-tree-layout-and-styling/: 02-01-PLAN.md  02-01-SUMMARY.md  02-CONTEXT.md  02-UI-SPEC.md
.planning/phases/03-widget-visual-polish-demos/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md
.planning/phases/04-built-in-widget-library/: 04-02-PLAN.md  04-03-PLAN.md
.planning/phases/04-production-readiness/: 04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md
.planning/phases/05-developer-experience-and-polish/: 05-01-PLAN.md
.planning/phases/05-screen-stack/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-03-PLAN.md  05-03-SUMMARY.md
.planning/phases/08-enhanced-display-widgets/: .continue-here.md  (+4 more)
.planning/research/: ARCHITECTURE.md  ASYNC_REACTIVE.md  CSS_LAYOUT.md  ECOSYSTEM.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  TESTING.md
crates/textual-rs/: Cargo.toml
crates/textual-rs-macros/: Cargo.toml
crates/textual-rs-macros/src/: lib.rs  widget_impl.rs
docs/: guide.md
(+145 files in other folders)
