[package]
name = "textual-rs"
version = "0.3.2"
edition = "2024"
authors = ["jabberwock"]
description = "Terminal UI library inspired by python-textual."
license-file = "LICENSE"


[workspace]
members = ["crates/textual-rs", "crates/textual-rs-macros"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.88"
